--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ limitations under the License.
 
 <html>
   <head>
-    <title>Web App Install Banner: Basic Prompt Sample</title>
+    <title>Club Selecta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json">
     <script>
