--- a/index.html
+++ b/index.html
@@ -59,24 +59,26 @@ limitations under the License.
     window.addEventListener('load', function() {
       var native_addToHome = false;
       var outputElement = document.getElementById('output');
-      navigator.serviceWorker.register('service-worker.js', {
-        scope: './'
-      })
-      .then(function(r) { //Service worker registrado
-        if (is.android() && (is.chrome() || is.opera())) {
-          outputElement.textContent = 'Your browser is supported :D';
-          native_addToHome = true;
-        }else{
-          outputElement.textContent = 'No install banner support :(';
-          addtohome.show();
-        }
-      })
-      .catch(function(whut) {
-        console.error('uh oh... ');
-        console.error(whut);
-      });
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js', {
+          scope: './'
+        })
+        .then(function(r) { //Service worker registrado
+          if (is.android() && (is.chrome() || is.opera())) {
+            outputElement.textContent = 'Your browser is supported :D';
+            native_addToHome = true;
+          }else{
+            outputElement.textContent = 'No install banner support :(';
+            addtohome.show();
+          }
+        })
+        .catch(function(whut) {
+          console.error('uh oh... ');
+          console.error(whut);
+        });
+      }
 
-      if(!native_addToHome){
+      if(native_addToHome == false){
         outputElement.textContent = 'Showing the alternative banner';
         addtohome.show();
       }
