--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ limitations under the License.
 
 <head>
   <title>Club Selecta</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Desactivar zooming en móviles -->
@@ -51,7 +52,6 @@ limitations under the License.
       debug: true,
       displayPace: 0,
       //maxDisplayCount: 1,
-      autostart: false
     });
   </script>
 </head>
