--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@ limitations under the License.
   <script src="addtohomescreen.js"></script>
   <script>
     var addtohome = addToHomescreen({
-      //skipFirstVisit: true,
-      debug: true,
-      displayPace: 0,
-      //maxDisplayCount: 1,
+      skipFirstVisit: true,
+      maxDisplayCount: 1
     });
   </script>
 </head>
