--- a/index.html
+++ b/index.html
@@ -48,9 +48,20 @@ limitations under the License.
   <script src="addtohomescreen.js"></script>
   <script>
     var addtohome = addToHomescreen({
-      skipFirstVisit: true,
-      maxDisplayCount: 1
+      debug: true,
+      displayPace: 0
     });
+  </script>
+  
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+    ga('create', 'UA-17479526-8', 'auto');
+    ga('send', 'pageview');
+  
   </script>
 </head>
 
