--- a/index.html
+++ b/index.html
@@ -49,23 +49,29 @@ limitations under the License.
   <script>
     var addtohome = addToHomescreen({
       debug: true,
-      displayPace: 0
+      displayPace: 0,
+      detectHomescreen: true,
+      onAdd: function () {
+        output.innerHTML = "Added!";
+        ga('send', 'event', 'addtohomescreen', 'yes');
+      }
     });
   </script>
-  
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  
+
     ga('create', 'UA-17479526-8', 'auto');
     ga('send', 'pageview');
-  
+
   </script>
 </head>
 
 <body>
   <h1>Hello world</h1>
+  <h2 id="output"></h2>
 </body>
 </head>
