--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@ limitations under the License.
 
 <body>
   <h1>Hello world</h1>
-  <h2 id="output"></h2>
+  <h2 id="output">Not added.</h2>
 </body>
 </head>
