--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@ limitations under the License.
       debug: true,
       displayPace: 0,
       maxDisplayCount: 0,
-      detectHomescreen: "hash",
+      detectHomescreen: true,
       onAdd: function () {
+    		alert('Welcome to the homescreen!');
+    	}      
+      /*onAdd: function () {
         document.getElementById('output').innerHTML = "Added!";
         ga('send', 'pageview', {
          'page': location.pathname + location.search  + location.hash
         });
         ga('send', 'event', 'addtohomescreen', 'yes');
         ga('send', 'event', 'mobile', 'click to call', '888-259-4979');
-      }
+      }*/
     });
   </script>
 </head>
