--- a/index.html
+++ b/index.html
@@ -65,16 +65,13 @@ limitations under the License.
       maxDisplayCount: 0,
       detectHomescreen: true,
       onAdd: function () {
-    		alert('Welcome to the homescreen!');
-        document.getElementById('output').innerHTML = "Added!";
-    	}
-      /*onAdd: function () {
         ga('send', 'pageview', {
          'page': location.pathname + location.search  + location.hash
         });
         ga('send', 'event', 'addtohomescreen', 'yes');
         ga('send', 'event', 'mobile', 'click to call', '888-259-4979');
-      }*/
+        alert("done");
+    	}
     });
   </script>
 </head>
