--- a/index.html
+++ b/index.html
@@ -1,20 +1,4 @@
 <!DOCTYPE html>
-<!--
-Copyright 2015 Google Inc. All Rights Reserved.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-
 <html>
 
 <head>
@@ -61,11 +45,11 @@ limitations under the License.
   <script>
     var addtohome = addToHomescreen({
       debug: true,
+      maxDisplayCount: 5,
       displayPace: 0,
       detectHomescreen: "hash",
       onAdd: function () {
         ga('send', 'event', 'addtohomescreen', 'yes');
-        alert("done");
     	}
     });
   </script>
@@ -74,4 +58,5 @@ limitations under the License.
 <body>
   <h1>Hello world</h1>
 </body>
-</head>
+
+</html>
